<resources>
    <string name="app_name">The Shoe Store</string>

    <!-- Menu -->
    <string name="logout">Logout</string>

    <!-- LoginFragment -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Welcome Fragment -->
    <string name="welcome_title">The Shoe Store</string>
    <string name="welcome_description">Your shoe warehouse for better store management.</string>
    <string name="welcome_button">Let\'s go</string>

    <!-- InstructionsFragment -->
    <string name="instruction_title">Instructions</string>
    <string name="instruction_description">The Shoe Store is the perfect warehouse and inventory manager. We can add, view and check the details of goods.</string>
    <string name="instruction_button">Start now</string>

    <!-- ShoeListFragment -->
    <string name="shoe_list_title">Shoe List</string>

    <!-- ShoeDetailFragment -->
    <string name="shoe_detail_title">Add a shoe</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

    <!-- ShoeView -->
    <string name="name_shoe">"Name: %1$s"</string>
    <string name="company_shoe">"Company: %1$s"</string>
    <string name="size_shoe">"Size: %.2f"</string>
    <string name="description_shoe">"Description: %1$s"</string>

</resources>
