<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout style="@style/OnboardingLayout">

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:visibility="gone" />

        <EditText
            android:id="@+id/username"
            style="@style/EmailInput"
            android:hint="@string/prompt_email" />

        <EditText
            android:id="@+id/password"
            style="@style/PasswordInput"
            android:hint="@string/prompt_password" />

        <Button
            android:id="@+id/loginBtn"
            style="@style/ActionButton"
            android:layout_marginTop="@dimen/margin_top"
            android:enabled="false"
            android:text="@string/action_sign_in" />

    </LinearLayout>
</layout>