<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Layout does not require a complicated arrangement of elements. The view is only a simple hierarchy, so I'm using LinearLayout-->
    <LinearLayout style="@style/OnboardingLayout">

        <TextView
            android:id="@+id/welcomeTitle"
            style="@style/Title"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/welcome_title" />

        <ImageView
            android:id="@+id/logo"
            style="@style/Logo"
            app:srcCompat="@drawable/ic_high_heel" />

        <TextView
            android:id="@+id/welcomeDescription"
            style="@style/Description"
            android:text="@string/welcome_description" />

        <Button
            android:id="@+id/welcomeBtn"
            style="@style/ActionButton"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/welcome_button" />
    </LinearLayout>
</layout>