<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout style="@style/Match">

        <include layout="@layout/guideline" />

        <TextView
            android:id="@+id/instructionTitle"
            style="@style/Title"
            android:text="@string/instruction_title"
            app:layout_constraintBottom_toBottomOf="@id/top"
            app:layout_constraintEnd_toEndOf="@id/right"
            app:layout_constraintStart_toStartOf="@id/left"
            app:layout_constraintTop_toBottomOf="@id/top" />

        <ImageView
            android:id="@+id/instructionLogo"
            style="@style/Logo"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintEnd_toEndOf="@id/right"
            app:layout_constraintStart_toStartOf="@id/left"
            app:layout_constraintTop_toBottomOf="@id/instructionTitle"
            app:srcCompat="@drawable/ic_info" />

        <TextView
            android:id="@+id/instructionDescription"
            style="@style/Description"
            android:text="@string/instruction_description"
            app:layout_constraintEnd_toEndOf="@id/right"
            app:layout_constraintStart_toStartOf="@id/left"
            app:layout_constraintTop_toBottomOf="@id/instructionLogo" />

        <Button
            android:id="@+id/instructionBtn"
            style="@style/ActionButton"
            android:text="@string/instruction_button"
            app:layout_constraintBottom_toBottomOf="@id/bottom"
            app:layout_constraintEnd_toEndOf="@id/right"
            app:layout_constraintStart_toStartOf="@id/left"
            app:layout_constraintTop_toTopOf="@id/bottom" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>